# project_text2SQL

./: .gitignore  Dockerfile  README.markdown  docker-compose.yml  pyproject.toml  start.sh
app/: main.py
app/static/: style.css
app/templates/: index.html
