[tool.poetry]
name = "text2sql"
version = "0.1.0"
description = "A simple text-to-SQL generator using LLM7"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
openai = "^1.40.0"
httpx = "^0.27.0"

[tool.poetry.scripts]
start = "app.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"